--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,12 +9,16 @@ html(lang="en")
     body 
         header
             h1 Noom
-        main 
-            form#nick
-                input(type="text", placeholder="choose a nickname." required)
-                button Save
-            ul 
-            form#message
-                input(type="text", placeholder="wirte a msg." required)
-                button Send
+        main
+            div#welcome
+                form
+                    input(placeholder="room name", rquired, type="text")
+                    button Enter Room
+            div#room
+                h3
+                ul
+                frorm
+                    input(placeholder="message", rquired, type="text")
+                    button Send
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
