--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -17,7 +17,7 @@ html(lang="en")
             div#room
                 h3
                 ul
-                frorm
+                form
                     input(placeholder="message", rquired, type="text")
                     button Send
         script(src="/socket.io/socket.io.js")
